--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2 id="status-text" class ="hidden">The winner is ...!</h2>
         
         <div id="buttons">
-            <button id="mute-button">Mute</button>
+            <button id="mute-button">Mute Sound</button>
     
             <button id="reset-button">New Game</button>
 
