feat: add instructions and instructions button with basic styling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-
+    <!-- Main area that holds the game-->
     <section>
 
         <h1>Tic Tac Toe</h1>
@@ -51,38 +51,61 @@
         </div>    
     </section>
 
+    <!-- Additional information section -->
     <section>
+        <!-- Feedback Form -->
+        <div>
+            <button class="button" id="feedback-button">Feedback</button>
 
-        <button class="button" id="feedback-button">Feedback</button>
+            <div id="popup-feedback">
+                <div>
+                    <button class="button" id="close-feedback-button" type="button">X</button>
+                </div>
 
-        <div id="popup-feedback">
-            <div>
-                <button class="button" id="close-feedback-button" type="button">X</button>
+                <form id="feedback-form" action="https://formdump.codeinstitute.net" method="POST">
+                                    
+                    <h2>What do you think?</h2>
+                    <hr>
+
+                    <div>
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+
+                    <div>
+                        <label for="comment">Comment</label>
+                        <textarea id="comment" name="comment" required></textarea>
+                    </div>
+
+                    <div>
+                        <button class="button" type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <!-- Instructions -->
+        <div id="instructions">
+
+            <button class="button" id="instructions-button">Instructions</button>
+
+            <div id="popup-instructions">
+                <h2>How to Play</h2>
+                <hr>
+                <ul>
+                    <li>Player 1 chooses a cell and marks it with an X.</li>
+                    <li>Player 2 chooses a cell and marks it with an O.</li>
+                    <li>The players take turns until a Win is achieved.</li>
+                    <li>A Win is achieved when one player gets three of their symbols in a row (horizontally, vertically, or diagonally).</li>
+                    <li>If no Win is achieved, the game ends in a Draw.</li>
+                </ul>
             </div>
 
-            <form id="feedback-form" action="https://formdump.codeinstitute.net" method="POST">
-                                
-                <h2>What do you think?</h2>
-
-                <div>
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-
-                <div>
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-
-                <div>
-                    <label for="comment">Comment</label>
-                    <textarea id="comment" name="comment" rows="3" required></textarea>
-                </div>
-
-                <div>
-                    <button class="button" type="submit">Submit</button>
-                </div>
-            </form>
         </div>
     </section>
 
