--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
         </div>
 
         <!-- Instructions -->
-        <div id="instructions">
+        <div>
 
             <button class="button" id="instructions-button">Instructions</button>
+
+            <button class="button" id="close-instructions-button" type="button">X</button>
 
             <div id="popup-instructions">
                 <h2>How to Play</h2>
