fix: update feedback and instructions button code to hide and unhide when clicked

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
             <button class="button" id="feedback-button">Feedback</button>
 
             <button class="button" id="instructions-button">Instructions</button>
+            <button class="button hidden" id="close-instructions-button" type="button">X</button>
 
-            <button class="button hidden" id="close-feedback-button" type="button">X</button>
+
         </div>
 
         <!-- Popup Feedback -->
@@ -86,7 +87,7 @@
                 </div>
 
                 <div>
-                    <button class="button" type="submit">Submit</button>
+                    <button class="button" type="submit" id="close-feedback-button">Submit</button>
                 </div>
             </form>
         </div>
