--- a/index.html
+++ b/index.html
@@ -48,21 +48,19 @@
             <button class="button" id="mute-button">Mute Sound</button>
 
             <button class="button" id="reset-button">New Game</button>
-
-            <button class="button" id="game-mode-button">Game Mode</button>
-        </div>
+ 
+            <button class="button" id="instructions-button">Instructions</button>
+             <button class="button hidden" id="close-instructions-button" type="button">Close</button>
+       </div>
     </section>
 
     <!-- Additional information section -->
     <section>
         <div class="buttons">
             <button class="button" id="feedback-button">Feedback</button>
-
-            <button class="button" id="instructions-button">Instructions</button>
+<!--        <button class="button" id="instructions-button">Instructions</button>
             <button class="button hidden" id="close-instructions-button" type="button">X</button>
-
-
-        </div>
+ -->        </div>
 
         <!-- Popup Feedback -->
         <div id="popup-feedback">
@@ -95,12 +93,11 @@
         <!-- Popup Instructions -->
         <div id="popup-instructions">
             <h2>How to Play</h2>
-            <hr>
             <ul>
                 <li>Player 1 chooses a cell and marks it with an X.</li>
                 <li>Player 2 chooses a cell and marks it with an O.</li>
                 <li>The players take turns until a Win is achieved.</li>
-                <li>A Win is achieved when one player gets three of their symbols in a row (horizontally, vertically, or
+                <li>A Win is achieved when one player gets three of their symbols in a row <br> (horizontally, vertically, or
                     diagonally).</li>
                 <li>If no Win is achieved, the game ends in a Draw.</li>
             </ul>
