--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 </head>
 
 <body>
+<header>
+    <h1>Tic Tac Toe</h1>
+</header>
+
     <!-- Main area that holds the game-->
     <section>
-
-        <h1>Tic Tac Toe</h1>
-
         <div id="board">
             <div class="cell" data-cell-index="0"></div>
             <div class="cell" data-cell-index="1"></div>
@@ -44,6 +45,7 @@
         <!-- Winner Announcement -->
         <h2 id="status-text" class="hidden"></h2>
 
+        <!-- Buttons-->
         <div class="buttons">
             <button class="button" id="mute-button">Mute Sound</button>
 
@@ -56,12 +58,6 @@
 
     <!-- Additional information section -->
     <section>
-        <div class="buttons">
-            <button class="button" id="feedback-button">Feedback</button>
-<!--        <button class="button" id="instructions-button">Instructions</button>
-            <button class="button hidden" id="close-instructions-button" type="button">X</button>
- -->        </div>
-
         <!-- Popup Feedback -->
         <div id="popup-feedback">
             <form id="feedback-form" action="https://formdump.codeinstitute.net" method="POST">
@@ -104,8 +100,27 @@
         </div>
     </section>
 
+    <footer>
+
+        <ul id="social-networks">
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in a new tab)">
+                <i class="fa-brands fa-facebook-f"></i></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)">
+                <i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit us on Twitter  (opens in a new tab)">
+                <i class="fa-brands fa-twitter"></i></a></li>
+        </ul>
+
+        <div class="buttons">
+            <button class="button" id="feedback-button">Feedback</button>
+         </div>
+    </footer>
+
     <!-- JS Script -->
     <script src="assets/js/script.js"></script>
+
+    <!-- Font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/a77617d661.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
