feat: add social media icons and links to footer

--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
 
         <!-- Buttons-->
         <div class="buttons">
-            <button class="button" id="mute-button">Mute Sound</button>
+            <button class="button" id="mute-button"><i class="fa-solid fa-volume-xmark"></i></button>
 
             <button class="button" id="reset-button">New Game</button>
  
             <button class="button" id="instructions-button">Instructions</button>
-             <button class="button hidden" id="close-instructions-button" type="button">Close</button>
+            <button class="button hidden" id="close-instructions-button" type="button">Close</button>
+
+            <button class="button" id="feedback-button">Feedback</button>
+
        </div>
     </section>
 
@@ -101,19 +104,16 @@
     </section>
 
     <footer>
-
         <ul id="social-networks">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in a new tab)">
                 <i class="fa-brands fa-facebook-f"></i></a></li>
+            <li><a href="http://www.tiktok.com" target="_blank" aria-label="Visit us on TikTok (opens in a new tab)"">
+                <i class="fa-brands fa-tiktok"></i></a></li>
             <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)">
                 <i class="fa-brands fa-instagram"></i></a></li>
             <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit us on Twitter  (opens in a new tab)">
                 <i class="fa-brands fa-twitter"></i></a></li>
         </ul>
-
-        <div class="buttons">
-            <button class="button" id="feedback-button">Feedback</button>
-         </div>
     </footer>
 
     <!-- JS Script -->
