fix: update color palette

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
        </div>
 
        <div>
-            <!-- Popup Feedback -->
+            <!-- Popup Feedback Form -->
             <div id="popup-feedback">
                 <form id="feedback-form" action="https://formdump.codeinstitute.net" method="POST">
 
@@ -107,6 +107,7 @@
     <audio src="assets/audio/victory.mp3"></audio>
     
     <footer>
+        <!-- Links to Social Media Channels -->
         <ul id="social-networks">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in a new tab)">
                 <i class="fa-brands fa-facebook-f"></i></a></li>
