--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     <div>
                         <label for="comment">Comment</label>
-                        <textarea id="comment" name="comment" required></textarea>
+                        <textarea id="comment" name="comment" rows="5" required></textarea>
                     </div>
 
                     <div>
