fix: update image size and positioning on 404 page

--- a/404.html
+++ b/404.html
@@ -29,7 +29,11 @@
 
     <a href="index.html"><h3>Click here to return</h3></a>
 
-    <img src="assets/images/tic-tac-toe.png" alt="A partially filled in tic-tac-toe board">
+    <div id="404-img">
+
+    </div>
+
+    <!-- <img src="assets/images/tic-tac-toe.png" alt="A partially filled in tic-tac-toe board"> -->
     
     <footer>
         <!-- Links to Social Media Channels -->
