docs: add credits section to readme file

--- a/404.html
+++ b/404.html
@@ -29,26 +29,8 @@
 
     <a href="index.html"><h3>Click here to return</h3></a>
 
-    <div id="404-img">
-
-    </div>
-
-    <!-- <img src="assets/images/tic-tac-toe.png" alt="A partially filled in tic-tac-toe board"> -->
+    <img src="assets/images/tic-tac-toe.png" alt="A partially filled in tic-tac-toe board">
     
-    <footer>
-        <!-- Links to Social Media Channels -->
-        <ul id="social-networks">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in a new tab)">
-                <i class="fa-brands fa-facebook-f"></i></a></li>
-            <li><a href="http://www.tiktok.com" target="_blank" aria-label="Visit us on TikTok (opens in a new tab)"">
-                <i class="fa-brands fa-tiktok"></i></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)">
-                <i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit us on Twitter  (opens in a new tab)">
-                <i class="fa-brands fa-twitter"></i></a></li>
-        </ul>
-    </footer>
-
     <!-- JS Script -->
     <script src="assets/js/script.js"></script>
 
