--- a/404.html
+++ b/404.html
@@ -27,15 +27,12 @@
         <h1>Page Not Found</h1>
     </header>
 
-    <a href="index.html"><h3>Click here to return</h3></a>
+        <a href="index.html"><h2>Click here to return</h2></a>
 
-    <img src="assets/images/tic-tac-toe.png" alt="A partially filled in tic-tac-toe board">
+        <img src="assets/images/tic-tac-toe.png" alt="A partially filled in tic-tac-toe board with ladybugs and clovers">
     
     <!-- JS Script -->
     <script src="assets/js/script.js"></script>
 
-    <!-- Font Awesome Kit-->
-    <script src="https://kit.fontawesome.com/a77617d661.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
