--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
         <h1>Page Not Found</h1>
     </header>
 
-        <a href="index.html"><h2>Click here to return</h2></a>
+        <a href="index.html"><h2 id="h2-404">Click here to return</h2></a>
 
         <img src="assets/images/tic-tac-toe.png" alt="A partially filled in tic-tac-toe board with ladybugs and clovers">
     
