--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <main>
         <!-- Game Area -->
         <section>
+
+            <h2 id="turn-tracker"></h2>
+
             <!-- Board -->
             <div id="board">
                 <div class="cell" data-cell-index="0"></div>
