fix: add code to remove hover effect and not allow clicks after win / draw

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <main>
         <!-- Game Area -->
         <section>
-
-            <h2 id="turn-tracker"></h2>
+            <!-- Turn tracker-->
+            <h2 id="turn-tracker">X's turn</h2>
 
             <!-- Board -->
             <div id="board">
@@ -47,22 +47,21 @@
             </div>
 
             <!-- Winner Announcement -->
-            <h2 id="status-text" class="hidden"></h2>
+            <h2 id="status-text" class="hidden">This will display the outcome of the game</h2>
 
             <!-- Buttons-->
             <div class="buttons">
-                <div class="buttons1">
-                    <button class="button" id="mute-button">Mute Sound</i></button>
+                <div class="buttons-flex">
+                    <button class="button" id="mute-button">Mute Sound</button>
 
                     <button class="button" id="reset-button">New Game</button>
                 </div>
     
-                <div class="buttons2">
+                <div class="buttons-flex">
                     <button class="button" id="instructions-button">Instructions</button>
                     <button class="button hidden" id="close-instructions-button" type="button">X</button>
 
                     <button class="button" id="feedback-button">Feedback</button>
-                    <!-- <button class="button hidden" id="submit-button" type="submit">Submit</button> -->
                     <button class="button hidden" id="close-feedback-button" type="button">X</button>
                 </div>
         </div>
@@ -130,7 +129,7 @@
         <ul id="social-networks">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit us on Facebook (opens in a new tab)">
                 <i class="fa-brands fa-facebook-f"></i></a></li>
-            <li><a href="http://www.tiktok.com" target="_blank" aria-label="Visit us on TikTok (opens in a new tab)"">
+            <li><a href="http://www.tiktok.com" target="_blank" aria-label="Visit us on TikTok (opens in a new tab)">
                 <i class="fa-brands fa-tiktok"></i></a></li>
             <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)">
                 <i class="fa-brands fa-instagram"></i></a></li>
