feat: add open graph meta data to head elements

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Meta tags for SEO -->
+    <!-- Meta Tags for SEO -->
     <meta name="description" content="Tic Tac Toe | Are you ready to play?">
     <meta name="keywords" content="tic tac toe, retro, game, online game, gaming">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Tic Tac Toe" />
+    <meta property="og:description" content="A simple game of tic tac toe, including instructions and a feedback form." />
+    <meta property="og:url" content="https://sarah-bue.github.io/tic-tac-toe/" />
+    <meta property="og:image" content="https://pixabay.com/photos/clover-four-leaf-clover-lucky-clover-1949946/" />
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
