--- a/404.html
+++ b/404.html
@@ -9,6 +9,12 @@
     <meta name="description" content="Tic Tac Toe | Are you ready to play?">
     <meta name="keywords" content="tic tac toe, retro, game, online game, gaming">
 
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Tic Tac Toe" />
+    <meta property="og:description" content="A simple game of tic tac toe, including instructions and a feedback form." />
+    <meta property="og:url" content="https://sarah-bue.github.io/tic-tac-toe/" />
+    <meta property="og:image" content="https://pixabay.com/photos/clover-four-leaf-clover-lucky-clover-1949946/" />
+
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -33,6 +39,5 @@
     
     <!-- JS Script -->
     <script src="assets/js/script.js"></script>
-
 </body>
 </html>
