--- a/404.html
+++ b/404.html
@@ -10,10 +10,10 @@
     <meta name="keywords" content="tic tac toe, retro, game, online game, gaming">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Tic Tac Toe" />
-    <meta property="og:description" content="A simple game of tic tac toe, including instructions and a feedback form." />
-    <meta property="og:url" content="https://sarah-bue.github.io/tic-tac-toe/" />
-    <meta property="og:image" content="https://pixabay.com/photos/clover-four-leaf-clover-lucky-clover-1949946/" />
+    <meta property="og:title" content="Tic Tac Toe">
+    <meta property="og:description" content="A simple game of tic tac toe, including instructions and a feedback form.">
+    <meta property="og:url" content="https://sarah-bue.github.io/tic-tac-toe/">
+    <meta property="og:image" content="https://pixabay.com/photos/clover-four-leaf-clover-lucky-clover-1949946/">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
