fix: update media queries and board sizing to improve responsiveness

--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
 
         <a href="index.html"><h2 id="h2-404">Click here to return</h2></a>
 
-        <img src="assets/images/tic-tac-toe.png" alt="A partially filled in tic-tac-toe board with ladybugs and clovers">
+        <img  id="img-404"src="assets/images/tic-tac-toe.png" alt="A partially filled in tic-tac-toe board with ladybugs and clovers">
     
     <!-- JS Script -->
     <script src="assets/js/script.js"></script>
